--- a/svc-portal-noticias.yaml
+++ b/svc-portal-noticias.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc-pod-1
+  name: svc-portal-noticias
 spec:
   type: NodePort
   ports:
     - port: 80
       #targetPort: 80
       nodePort: 30000
-      #vai de 30000 a 32767
   selector:
-    app: primeiro-pod
+    app: portal-noticias
